Fixed view overflow issue.

--- a/app/css/sharingear.css
+++ b/app/css/sharingear.css
@@ -99,6 +99,8 @@ body {
 .view-container .view {
 	padding-top: 48px;
 	min-height: 100%;
+	width: 100%;
+	overflow-x: hidden;
 }
 @media (min-width: 768px) {
 	.view-container .view {
